architecture-ide/tests/fixtures/negative/C9_missing_op_principle.concept
concept Counter

  purpose
    count things

  state
    total: int

  actions
    inc [ ] => [ total: int ]
